temporary commit - tests for node and core including controller
changelog: added